# komoot2sigma

./: .gitignore  README.md  pyproject.toml
src/komoot2sigma/: __init__.py  __main__.py  cli.py  config.py  komoot.py  sigma.py
