[project]
name = "komoot2sigma"
version = "0.1.0"
description = "Transfer planned routes from Komoot to Sigma Data Cloud"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "gpxpy>=1.6",
    "komootgpx>=1.5",
]

[project.scripts]
komoot2sigma = "komoot2sigma.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/komoot2sigma"]
